fixed dropdown menu overlap

--- a/css/experience.css
+++ b/css/experience.css
@@ -31,6 +31,7 @@
     padding: 2px 5px;
     font-size: 24px;
     text-align: center;
+    z-index: 10000;
 }
 
 .timeline ul li .content h3 {
