--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ body {
     --icon-color: white;
     --icon-hover-color: #40e0d0;
     --active-page-bg: green;
+    --active-page-dropdown-bg: lightgreen;
     --tab-color: rgb(120, 120, 120);
     --tab-color-focus: steelblue;
     --dialog-background: white;
@@ -34,20 +35,10 @@ body {
     --time-color: #cccccc;
 }
 
-a {
-    text-decoration: none;
-    color: var(--text-color);
-}
-
-li {
-    list-style: none;
-}
-
 .container {
     padding: 0 1em;
     max-width: 800px;
     margin: 0 auto;
-    /* border: 1px solid red; */
 }
 
 .container2 {
@@ -58,7 +49,6 @@ li {
     padding-right: 2rem;
     /* max-width: 800px; */
     width: 60%;
-    /* border: 1px solid red; */
 }
 
 header {
